# controller-test-work

./: .gitignore  .gitmodules  CMakeLists.txt  adj.ini  build.bat  ini.ini
doc/: Controller-Retranslator.docx  Errors.xlsx  admindoc.docx  doc.docx  ~$mindoc.docx  ~$ntroller-Retranslator.docx  ~WRL0003.tmp  Описание ошибок.docx
include/: Encode.hpp  Error.hpp  WinReg.hpp  myassert.hpp
include/mmsg/: mmsg.hpp
lib/Debug/: dllInj.lib
lib/MinSizeRel/: dllInj.lib
lib/RelWithDebInfo/: dllInj.lib
lib/Release/: dllInj.lib
src/: CMakeLists.txt  Databases.cpp  Databases.hpp  Init.cpp  Init.hpp  Lights.cpp  Output.cpp  Output.hpp  Reader.cpp  Reader.hpp  State.hpp  dll.cpp  dll.h  dllmain.cpp  fixer.cpp  fixer.h  init.cpp  init.hpp  lights.cpp  lights.hpp  msg.hpp  serialPool.cpp  serialPool.hpp  shared.hpp
src/Control/: CMakeLists.txt  Control.cpp  Control.hpp
src/ControllerDll/: CMakeLists.txt  Databases.cpp  Databases.hpp  Init.cpp  Init.hpp  Lights.cpp  Output.cpp  Output.hpp  Reader.cpp  State.cpp  State.hpp  fixer.cpp  mmsg.cpp  mmsg.hpp  msg.hpp  serialPool.cpp
src/ControllerDll/core/: Databases.cpp  Init.cpp  Init.hpp  Lights.hpp  Output.cpp  Output.hpp  Reader.cpp  Reader.hpp  State.cpp  State.hpp  fixer.cpp  fixer.h  msg.hpp  serialPool.hpp
src/ControllerDll/core/encoding/: Encode.cpp
src/ControllerDll/dll/: dll.cpp  dll.h
src/ControllerDll/standalone/: Commands.cpp  Commands.hpp  Retranslator.cpp  Retranslator.hpp  bytestring.hpp  macro.hpp  main.cpp
src/RetranslatorActiveXLib/: AXEntry.cpp  CMakeLists.txt  Exports.def  Factory.cpp  Factory.hpp  Hook.cpp  Hook.hpp  Registry.cpp  Retranslator.idl  Retranslator.rc  RetranslatorAX.cpp  RetranslatorAX.hpp  RetranslatorClassesAX.hpp  RetranslatorComPort.cpp  RetranslatorUtilsAX.cpp
src/RetranslatorActiveXLib/PipeQueueSystem/: PipeQueueSystem.cpp  PipeQueueSystem.hpp
src/RetranslatorActiveXLib/include/: HookTypes.hpp  IRetranslatorAX.hpp  RetranslatorDefs.hpp
src/RetranslatorActiveXLib/test/: test.cpp
src/SLogger/: CMakeLists.txt  SLogger.cpp  SLogger.hpp
src/dbproc/: CMakeLists.txt  main.cpp
src/encoding/: Encode.cpp
src/mmsg/: CMakeLists.txt  SQueue.hpp  mmsg.cpp  msgb.cpp  test.cpp
src/starter/: CMakeLists.txt  main.cpp
